[gd_scene load_steps=4 format=3 uid="uid://sfxyhloygidk"]

[ext_resource type="Script" path="res://games/knews/nodes/mushmash/action_timer_controller.gd" id="1_xm8sr"]
[ext_resource type="Script" path="res://games/knews/nodes/mushmash/mushmash_map_settings.gd" id="2_qm2fn"]

[sub_resource type="CanvasTexture" id="CanvasTexture_v8juv"]

[node name="ActionTimerNode" type="Node2D"]
script = ExtResource("1_xm8sr")

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sprite2DActionIndicator" type="Sprite2D" parent="."]
scale = Vector2(20, 20)
texture = SubResource("CanvasTexture_v8juv")

[node name="Label" type="Label" parent="."]
offset_left = -14.0
offset_top = 14.0
offset_right = 26.0
offset_bottom = 37.0
text = "Timer:"

[node name="MushMashMapSettings" type="Node" parent="."]
script = ExtResource("2_qm2fn")

[node name="TurnLabel" type="Label" parent="."]
offset_left = -252.0
offset_top = -9.0
offset_right = -207.0
offset_bottom = 14.0
text = "Turn: "

[connection signal="timeout" from="ActionTimer" to="." method="_on_timer_timeout"]
